apps/base/productivity/machine-learning/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: llm
spec:
  type: ExternalName
  externalName: machine-learning.internal.${DOMAIN}
  ports:
    - name: http
      port: 9000
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: comfyui
spec:
  type: ExternalName
  externalName: machine-learning.internal.${DOMAIN}
  ports:
    - name: http
      port: 8188
      protocol: TCP
